<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_meeting_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="ifRoom"
        android:title="@string/filter">
    </item>
</menu>